@@ -2,6 +2,7 @@ opsicliend_mac (4.1.0.1) experimental; urgency=low
 
   * macos: entitlement for network share access
   * linux: initial
+  * TOpsiHTTPSAcceptingThread: different calls for macos / linux
 
 -- Detlef Oertel <d.oertel@uib.de>  Thu, 12 Mar 2020:15:00:00 +0200
 
